More culture stuff

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -89,6 +89,13 @@ PB_Culture_Ruthenian_tt:0 "Ruthenian"
 PB_Culture_Turkish_tt:0 "Turkish" 
 PB_Culture_Stamboul_tt:0 "Stamboul" 
 
+# Russia #
+
+PB_Culture_Ukrainian_tt:0 "Ukrainian" 
+PB_Culture_Moldovan_tt:0 "Moldovan"
+PB_Culture_Malorussian_tt:0 "Malorussian"
+PB_Culture_Polish_tt:0 "Polish"
+
 
 ## -------- Expanded Lore -------- ##
 
@@ -107,17 +114,17 @@ PB_Culture_North_English_tt_delayed:0 ""
 
 # FRANCE #
 
-PB_Culture_Breton_tt_delayed:0 ""
+PB_Culture_Breton_tt_delayed:0 "To the northwest of France the last Celts in mainland Europe dwell.  After hundreds of years of forced homogeneity with the French, the Bretons gained their independence after the French surrendered and with that formed a second Breton state.  The Bretons are currently going through a cultural renaissance; with the Breton language seeing a record number of speakers and new art and literature coming from the peninsula, it seems the last mainland Celts have finally secured their existence.  However, the neo-imperialist government to their southeast has been threatening them as of late, and with French revanchism on the rise, some can’t help but think the Breton renaissance’s days are numbered."
 PB_Culture_French_tt_delayed:0 ""
-PB_Culture_Occitan_tt_delayed:0 ""
+PB_Culture_Occitan_tt_delayed:0 "For hundreds of years, the Occitan people have suffered persecution and forced integration with their French rulers.  From the Albigensian Crusade to the founding of France’s neo-imperialist government, the Occitans have dealt with much.  However, this has not shattered their spirit; they continue on with their long-lasting traditions and unique Mediterranean language, keeping the Occitan torch held high amongst the darkness of French chauvinism.  They refused to be silenced, and as such provide plenty of problems for France’s governing neo-imperialists in the form of light armed resistance and protests.  Even then, some have found shelter from the revanchists in Catalonia, Italy, and Algeria, meaning even if the French manage to win, the Occitans will live on forever."
 PB_Culture_Corsican_tt_delayed:0 ""
 PB_Culture_Pied_Noir_tt_delayed:0 ""
 
 # LOWLANDS #
 
-PB_Culture_Dutch_tt_delayed:0 ""
+PB_Culture_Dutch_tt_delayed:0 "Revolting from the Spanish Habsburg Hegemony in the middle of the 16th century, the Dutch have presented themselves as a formidable power on the European continent and certainly also as a colonial power. Even discovering many places such as Australia, New Zealand and more. Not only are they a people of conquering, but also of mercantilism, trade, birthplace of modern capitalism, and the founding place of the first ever Republic, which has forever changed the political landscape on the European continent. Although the republic did not last, the people now have a strong royal family, colonial empire and a very distinct liberal identity as a people"
 PB_Culture_Flemish_Lore_tt_delayed:0 ""
-PB_Culture_Wallonian_tt_delayed:0 ""
+PB_Culture_Wallonian_tt_delayed:0 "Although the population largely speaks French, the culture is far straying from that of French culture. It can be best described as mitch match of French, German and Dutch culture, and some parts even having some Luxembourgian culture. Having gained their independence quite recently in 1910 after the Great War, the country was in ruins, but the people of Wallonia managed to not only rebuild the country, but also foster unity amongst there newly independent citizens. The creation of the Wallonian state can be credited to the governments of the imperial powers, who the idea of a buffer state between both France and the Netherlands. They are also the reason that Walloon is the only official language in the country, which was achieved through their anti-French agenda. The people are known too be very friendly, mercantile and most helpful when it comes to most things."
 
 # GERMANY #
 
@@ -129,7 +136,7 @@ PB_Culture_Saxon_tt_delayed:0 ""
 PB_Culture_Southern_German_tt_delayed:0 ""
 PB_Culture_Swiss_tt_delayed:0 ""
 PB_Culture_Austrian_tt_delayed:0 ""
-PB_Culture_Studenten_tt_delayed:0 ""
+PB_Culture_Studenten_tt_delayed:0 "The Sudeten Germans are a branch of Germans living along the German-Bohemian border in the Sudeten Mountains.  Having moved east as part of the old Ostsiedlung phenomenon, in which German settlers moved east from central Germany during the Middle Ages, the Sudeten Germans are a populous minority in Bohemia, making up 23% of the population in the region.  With them they brought the German language and culture, making the mountains their home.  The Sudeten Germans are a point of contention between nationalists, with German nationalists supporting the integration of the Sudetenland into Germany proper, and Czech and pan-Slavic nationalists supporting their expulsion from the mountains.  Either way, they’ve lived in the mountains for hundreds of years - they doubt anybody will be able to take their homes from them."
 PB_Culture_Bohemian_tt_delayed:0 ""
 PB_Culture_Silesian_tt_delayed:0 ""
 
@@ -146,37 +153,44 @@ PB_Culture_Karelian_tt_delayed:0 ""
 
 PB_Culture_North_Italian_tt_delayed:0 ""
 PB_Culture_Central_Italian_tt_delayed:0 ""
-PB_Culture_South_Italian_tt_delayed:0 ""
-PB_Culture_Sardinian_tt_delayed:0 ""
+PB_Culture_South_Italian_tt_delayed:0 "Southern-Italian culture is mainly known for food and traditions associated with Italy as a whole. Southern-Italian food, such as the famous pizza and many types of pasta, are popular not only in Naples but all over the world as well.  Beyond food, Southern-Italians are known for their adherence to Catholicism, their folk music, and organized crime via the Italian Mafia which operates heavily in southern Italy.  Southern-Italians value family and community above all - which is where their love for food and music comes from.  Anything that can bring the family - or town - together is valued by Southern-Italians.  Architecture is also important to Southern-Italians, as their Mediterranean buildings influenced by Greeks and North Africans are iconic to the region."
+PB_Culture_Sardinian_tt_delayed:0 "The island of Sardinia used to be populated an unknown civilisation sometime before the Roman Empire, which are known to have created the very well made Nuraghes, which are still standing today. Because of the things that were found in their ruins, there are several holidays, festivities and other activities that were created in their honour. Although not much remains of the Sardinian language, it is still spoken by the older population and is still taught in smaller circles. Sardinia although a very formal part of Italy, has some autonomy which allows the island to keep its traditions and culture. The people there are known to be very relaxed, rough and not to bothered by continental affairs"
 
 # IBERIA #
 
-PB_Culture_Spanish_tt_delayed:0 ""
-PB_Culture_Portuguese_tt_delayed:0 ""
-PB_Culture_Galician_tt_delayed:0 ""
-PB_Culture_Catalan_tt_delayed:0 ""
-PB_Culture_Basque_tt_delayed:0 ""
+PB_Culture_Spanish_tt_delayed:0 "The Spanish have been everywhere, from the Americas to the Philippines, and as such their culture is very well one of the most famous.  The food, the art, the music, the traditions - all of which are associated with one of Europe’s most interesting and international cultures in the world.  One cannot associate Spain without thinking of its many fames, such as paella and classical guitar.  One of its most important aspects, Catholicism, has become so important that it has an actual place in Spain’s government.  In a wave of theocracy and neo-imperialism, most of Iberia, the Spanish included, embraced the place of their God in everyday government.  Religion has played larger and larger roles with the outbreak of Carlism in the nineteenth century to the modern day, and while other groups amongst the Spanish resist, it seems they’re the main force behind the ultimate Christianization of Iberia."
+PB_Culture_Portuguese_tt_delayed:0 "The Portuguese are a people of adventure and trade.  As once the owners of one of Europe’s largest colonial empires, and having influence all over the globe until recently in modern history, much of what the Portuguese discovered about the world around them has not been forgotten.  Their influence was so wide-reaching that the Lusophone world lives from Brazil to southern Africa, where Portuguese speakers reside.  Political instability has made its way to the Portuguese, with a failed monarchy giving way to Portugal’s modern theocracy based on its long-standing religious nature, much like their Spanish brethren to the east.  Whether this regime will last - and if the Portuguese people truly desire theocracy - still stands to be questioned, but it seems finally the Portuguese have found their political niche."
+PB_Culture_Galician_tt_delayed:0 "Some consider the Galicians a Romance people while others consider them Celtic - either way, the Galicians are a proud people with centuries of rich history.  As they had one of the original crusader states in northern Iberia, Galicians went on to found Portugal and resisted control from Castile until they imposed a Santa Hermandad occupation on the region.  Since then, Galicia has been stuck in-between two claimants, the Spanish and the Portuguese, in which the region has changed hands multiple times over the course of centuries.  The Galician culture is rich in art, song, and traditions, especially with the Celtic revival that occurred in the mid-nineteenth century, and tend not to follow nationalist or neo-imperialist ideals as closely as other groups in Iberia do."
+PB_Culture_Catalan_tt_delayed:0 "For a thousand years, the Catalan people have been one of Iberia’s most important groups of people.  Participating in the Reconquista and founding their own empire - Aragon - in the early centuries of the second millennium, the Catalans enjoyed their place at Iberia’s table of important nations.  All of that changed after the Union of the Crowns of Castile and Aragon, and the Catalans have been sidelined by the Spanish ever since.  As such, this is translated into frequent rebellions against the Spanish - some in nationalist nature, some political - and Catalonia has seen much strife, especially with the advent of nationalism in the early nineteenth century and neo-imperialism in the early twentieth.  They continue to fight to this day for independence, though their uprisings are piecemeal."
+PB_Culture_Basque_tt_delayed:0 "The Basque people are truly unique, with a language and customs that can’t be traced to any ancestor.  They’ve inhabited the Basque Country, a territory from northern Iberia to southwestern France, for millennia, and are historically one of Iberia’s most religious regions.  They share a history of militant nationalism and religiousness, fighting wars of independence and regime change against Spain for centuries.  They famously joined the Second Carlist War because of the loss of their special autonomous privileges and to establish a traditionalist, almost theocratic monarchy in Spain.  In a twist of fate, they have escaped the Spanish theocracy and formed their own Basque state - but with a traditionalist Spanish to their south and an expansionist France to their north, they’re in-between a rock and a hard place."
 PB_Culture_Asturian_tt_delayed:0 ""
-PB_Culture_Andalusian_tt_delayed:0 ""
+PB_Culture_Andalusian_tt_delayed:0 "Andalusian culture, despite its minority within the Iberian peninsula, has largely created much of Spain’s modern cultural hallmarks - from flamenco to bullfighting, and even the musical chord progression named after them, the Andalusian cadence -  the Andalusian people have been incredibly influential to not only Iberian culture but the world’s perception of it.  Modern Andalusian culture developed after the Reconquista and has since dominated southern Spain from Huelva to Cartagena.  Unlike the Catalans or Basques to the north, Andalusian nationalism isn’t nearly as popular, and as such many consider Andalusia to be a core part of Spain.  However, there are still some calls for autonomy for Andalusia - but any notion of independence is usually only shared by staunch nationalists."
 
 # BALKANS #
 
 PB_Culture_Hellenic_tt_delayed:0 ""
 PB_Culture_Albanian_tt_delayed:0 ""
 PB_Culture_Slovenian_tt_delayed:0 ""
-PB_Culture_Macedonian_tt_delayed:0 "Macedonian"
-PB_Culture_Serbian_tt_delayed:0 "Serbian"
-PB_Culture_Croatian_tt_delayed:0 "Croatian"
-PB_Culture_Dalmatian_tt_delayed:0 "Dalmatian"
-PB_Culture_Bosnian_tt_delayed:0 "Bosnian"
-PB_Culture_Montenegrin_tt_delayed:0 "Montenegrin"
-PB_Culture_Bulgarian_tt_delayed:0 "Bulgarian"
-PB_Culture_Romanian_tt_delayed:0 "Romanian"
-PB_Culture_Hungarian_tt_delayed:0 "Hungarian" 
-PB_Culture_Slovakian_tt_delayed:0 "Slovakian" 
-PB_Culture_Ruthenian_tt_delayed:0 "Ruthenian" 
+PB_Culture_Macedonian_tt_delayed:0 ""
+PB_Culture_Serbian_tt_delayed:0 ""
+PB_Culture_Croatian_tt_delayed:0 ""
+PB_Culture_Dalmatian_tt_delayed:0 ""
+PB_Culture_Bosnian_tt_delayed:0 ""
+PB_Culture_Montenegrin_tt_delayed:0 ""
+PB_Culture_Bulgarian_tt_delayed:0 ""
+PB_Culture_Romanian_tt_delayed:0 ""
+PB_Culture_Hungarian_tt_delayed:0 "" 
+PB_Culture_Slovakian_tt_delayed:0 "" 
+PB_Culture_Ruthenian_tt_delayed:0 "" 
 
 # ASIA-MINOR #
 
-PB_Culture_Turkish_tt_delayed:0 "Turkish" 
-PB_Culture_Stamboul_tt_delayed:0 "Stamboul" 
+PB_Culture_Turkish_tt_delayed:0 "" 
+PB_Culture_Stamboul_tt_delayed:0 "" 
+
+# RUSSIA #
+
+PB_Culture_Ukrainian_tt_delayed:0 "" 
+PB_Culture_Moldovan_tt_delayed:0 ""
+PB_Culture_Malorussian_tt_delayed:0 ""
+PB_Culture_Polish_tt_delayed:0 ""
