--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -1,15 +1,17 @@
 ﻿l_english:
 
   PB_CoE_Conference_of_Europe:0 "The Conference of Europe"
-  PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conferece: [Coe_get_topic] \n\nCurrent Proposal: [Coe_get_proposal] \n\nCurrent additions to the proposal: [Coe_get_changes1] [Coe_get_changes2] [Coe_get_changes3] [Coe_get_changes4] [Coe_get_changes5]\n\nCurrent chance of §Gapproval§! of the proposal:"
+  PB_CoE_Conference_of_Europe_desc:0 "\n\n\n\n\n\nThe second war that has decimated Europe in 20 years has finally come to an end. Cities now resemble smoldering graveyards, while entire villages have been wiped off the map, either due to national projects of achieving \"natural populations\" or due to the hellish machines and innovations unleashed upon the continent during the war. Roads and railways are broken and beyond repair, while industrious factories now seem abandoned. \n\nWith the powers that challenged the status quo now destroyed, Britain, Germany and their allies now seek to partition the pie correctly. It remains to be seen how possible that will be, as some seek revenge for the devestation or national humiliation, while others seek to bring unity to a divided Europe. \n\nCurrent Topic of the Conference: [Coe_get_topic] \n\nCurrent Proposal: [Coe_get_proposal] \n\nCurrent additions to the proposal: [Coe_get_changes1] [Coe_get_changes2] [Coe_get_changes3] [Coe_get_changes4] [Coe_get_changes5]\n\nCurrent chance of §Gapproval§! of the proposal: \nGermany [GER.GetFlag]: [get_chance_variable_ger] \nBritain [ENG.GetFlag]: [get_chance_variable_eng] \nTurkey [TUR.GetFlag]: [?TUR.Chance_Vote|%0] \n[if_italy_is_ally]"
   PB_CoE_Add_A_Demilitarization_Clause:0 "Add Extensive Demilitarisation Clause"
   PB_CoE_Add_A_Demilitarization_Clause_desc:0 "To placate the German diplomats, we may introduce an extensive plan to demilitarise the French state to the Dexter Plan. This will hinder French capabilities to build autopods, tanks, artillery, bio-genetic weaponry, airplanes and any military-grade ship or submarine. While it may prove to be the hand the Germans needed to approve of this plan, it would seriously neuter a friendly French military in the forseeable future."
   PB_CoE_Allow_Lorraine_Occupation:0 "Allow Lorraine Occupation"
   PB_CoE_Allow_Lorraine_Occupation_desc:0 "It seems unlikely that the Germans would be satisfied with simply keeping the current borders with France untouched. A compromise needs to be made, allowing the continued occupation of the previously demilitarised province of Lorraine by German forces. Britain will approve of the Lorraine occupation for at least 100 years, unless Germany decides to relinquish its control over the territory in the future."
   PB_CoE_A_Jewish_Homeland:0 "Discuss a Jewish Homeland"
   PB_CoE_A_Jewish_Homeland_desc:0 "The Jewish people have suffered immensely under the French regime, seeing insane forms of persecution. While a rather unorthodox proposal, a few German diplomats have proposed to grant the Jewish people a part of France as repayment for the unethical and immoral projects targetting French jews of the former French government."
+
   PB_CoE_GER_choose_place_for_israel:0 "Pick [FROM.GetName] as Jewish Homeland"
   PB_CoE_GER_choose_place_for_israel_desc:0 "Coastal, a nice climate and small: this territory is the perfect homeland for the Jewish people!"
+
   PB_CoE_Divide_the_Regions:0 "Discuss Spheres of Influence"
   PB_CoE_Divide_the_Regions_desc:0 "While our proposal may initially be unappealing to the British delegation, perhaps we can smoothen the tension with a little dividing and conquering? The establishment of new states in France allows all debating parties to carve up a small sphere of influence in the region. Perhaps by giving the Brits a piece of the pie, they may be less hesitant to support the Schwarz proposal?"
   PB_CoE_Implement_Full_Deindustrialisation:0 "Fully Implement Schwarz's Vision"
@@ -29,8 +31,8 @@
   Coe_no_current_proposal:0 "§gNo Current Proposal§!"
   Coe_get_proposal_dexter:0 "§YDexter Plan§! \n\nFrance's pre-war borders will be restored, with the exception of Pas de Calais going to Wallonia [WLA.GetFlag]. French industry will be directly divided and watched over by the main members of the League of Nations."
   Coe_get_proposal_schwarz:0 "§YSchwarz Proposal§! \n\nPre-war France will lose Pas de Calais to Wallonia [WLA.GetFlag]and will be divided into its four fundamental regions: Occitania [OCT.GetFlag], Burgundy [BRG.GetFlag], Normandy [NRM.GetFlag] and the Seine Region."
+  Coe_get_proposal_francia:0 "§YProject \"Francia\"§! \n\nFrance [FRA.GetFlag]and Germany [GER.GetFlag] will unify under a single government, its capital located in Köln. §RNo war reparations can be expected from France if this plan is put in motion§!."
 
-  Coe_no_current_changes:0 ""
   Coe_get_changes_lorraine:0 "\n- Continued German [GER.GetFlag]occupation of Lorraine"
   Coe_get_changes_demilitarisation:0 "\n- Extensive demilitarisation of the French state"
   Coe_get_changes_israel:0 "\n- The establishment of Israel [ISR.GetFlag] on French soil"
@@ -40,6 +42,11 @@
   Coe_get_changes_schwarz_lorraine:0 "\n- Germany [GER.GetFlag] will maintain its occupation of Lorraine and Franche-Comté"
   Coe_get_changes_schwarz_vision:0 "\n- A German-led committee will oversee the complete deindustrialisation of former French territory"
 
+  Coe_italy_is_ally:0 "Italy [ITA.GetFlag]: [?ITA.Chance_Vote|%0]"
+  Coe_Germany_votes:0 "[?GER.Chance_Vote|%0]"
+  Coe_England_votes:0 "[?ENG.Chance_Vote|%0]"
+
+  Coe_proposed_plan:0 "§YProposed the Plan§! (Automatic §GApproval§!)"
 
   PB_COE_PROPOSAL_DEXTER:0 "The \"§YDexter Plan§!\" is currently discussed."
   COE_ISRAEL_IN_FRANCE:0 "A state has been picked for a Jewish homeland"
@@ -48,7 +55,7 @@
   PB_COE_ENG_MORE_CHANCE:0 "§YBritain§! [ENG.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
   PB_COE_TUR_MORE_CHANCE:0 "§YThe Ottoman Empire§! [TUR.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
   PB_COE_ITA_MORE_CHANCE:0 "§YItaly§! [ITA.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
-
+  
 
 
   #Events
@@ -63,7 +70,19 @@
   COE.5.t:0 "Conference of Europe: The Schwarz Proposal"
   COE.5.d:0 "Out of nowhere, the German delegation has backed a proposal written by German bureaucrat Franz Xaver Schwarz, deemed so radical that it has even taken the Turkish delegation aback. Schwarz is a known German ideologue, famed for his intellectual argumentation of anti-French sentiment. Using history and culture, Schwarz argues that the French have been a nation of expansionism since its inception and that it has to cease existing for peace in Europe to be viable. \n\nThe proposal pictures an Europe without France. The country is instead divided into its \"medieval\" parts, dividing the country among a Republic of the Seine, a Burgundian Kingdom, a Normandian state and a Southern Occitania. While Schwarz himself has gone even further, advocating for complete deindustrialisation and \"turning the clock back in France\", German diplomats still know how to be diplomatic and have thus kept those ideas out of the final draft. Still, the concept to the British delegation seems beyond unreasonable."
   COE.5.a:0 "Let the vote begin..."
+  COE.6.t:0 "Conference of Europe: Rathenau's Francia" 
+  COE.6.d:0 "An interesting proposal has been put forward by the German delegation at Palace Het Loo. Concluding that Europe has been a continent plagued with wars for over decades at this point, often motivated through national competition and international anarchy, Rathenau's proposal has proposed the unification of the French and German states into one, collosal Frankenstein state. Inspired by the Empire of Charlemagne of the early medieval era, Rathenau coined the name \"Francia\" for his ambitious project of Franco-German unity. \n\nThe proposal has been met with skepticism by British diplomats, but the sudden relaxed tone from the German diplomats has forced the Brits into an interesting position: while unorthodox, this proposal is perhaps the best the UK will get in terms of a German-approved proposal that guarantees continental peace."
+  COE.6.a:0 "Let the vote begin..."
+
+  COE.20.t:0 "Conference of Europe: Ending the France Debate"
+  COE.20.d:0 "A few exasperated sighs filled the small room in Palace Het Loo, as diplomats and government figures neatly compiled their papers once again into their briefcases. The first round of discussions had concluded and the topic of France was settled. \n\nAs coffee, tea and some light celebratory wine was offered to the many men standing in the halls of Het Loo, the fate of Europe was closer to being further constructed."
+  COE.20.a:0 "And the curtains close on this debate"
 
   COEDEX.1.t:0 "The Discussion of a Jewish Homeland"
   COEDEX.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
   
+  #Cosmetics
+
+  GER_FRANCIA:0 "Francia"
+  GER_FRANCIA_ADJ:0 "Francian"
+  GER_FRANCIA_DEF:0 "The United Kingdoms of Francia"
