--- a/localisation/english/PB_CoE_l_english.yml
+++ b/localisation/english/PB_CoE_l_english.yml
@@ -8,10 +8,8 @@
   PB_CoE_Allow_Lorraine_Occupation_desc:0 "It seems unlikely that the Germans would be satisfied with simply keeping the current borders with France untouched. A compromise needs to be made, allowing the continued occupation of the previously demilitarised province of Lorraine by German forces. Britain will approve of the Lorraine occupation for at least 100 years, unless Germany decides to relinquish its control over the territory in the future."
   PB_CoE_A_Jewish_Homeland:0 "Discuss a Jewish Homeland"
   PB_CoE_A_Jewish_Homeland_desc:0 "The Jewish people have suffered immensely under the French regime, seeing insane forms of persecution. While a rather unorthodox proposal, a few German diplomats have proposed to grant the Jewish people a part of France as repayment for the unethical and immoral projects targetting French jews of the former French government."
-
   PB_CoE_GER_choose_place_for_israel:0 "Pick [FROM.GetName] as Jewish Homeland"
   PB_CoE_GER_choose_place_for_israel_desc:0 "Coastal, a nice climate and small: this territory is the perfect homeland for the Jewish people!"
-
   PB_CoE_Divide_the_Regions:0 "Discuss Spheres of Influence"
   PB_CoE_Divide_the_Regions_desc:0 "While our proposal may initially be unappealing to the British delegation, perhaps we can smoothen the tension with a little dividing and conquering? The establishment of new states in France allows all debating parties to carve up a small sphere of influence in the region. Perhaps by giving the Brits a piece of the pie, they may be less hesitant to support the Schwarz proposal?"
   PB_CoE_Implement_Full_Deindustrialisation:0 "Fully Implement Schwarz's Vision"
@@ -22,6 +20,14 @@
   PB_CoE_Take_Lorraine_Region_desc:0 "We are the victors of the second Great War and, as the saying goes, to the victor goes the spoils! Lorraine and Franche-Comté are exactly the kind of spoils we desire, so we will take the opportunity to seize the regions from a potential Burgundian state, when our proposal is agreed upon."
   PB_CoE_The_Rest_of_Papua:0 "North Papua for Approval"
   PB_CoE_The_Rest_of_Papua_desc:0 "The situation has become beyond tense in Het Loo, as the Brits still aren't that on board with our Schwarz proposal. With even our most veteran diplomats unsure of the British response, the idea has been opted to basically bribe the British with the rest of the island of Papua, exchanging it for guaranteed approval for the Schwarz proposal."
+  PB_CoE_Independent_Normandy_Compromise:0 "The Rouen Compromise"
+  PB_CoE_Independent_Normandy_Compromise_desc:0 "To create such a powerful state in continental Europe is begging to destroy the delicate balance of power in the eyes of the British. While supportive of their German allies, the Brits will need some guarantee in the form of a bufferstate to keep the two great powers at some distance. Establishing an independent and neutral Normandy may do the trick."
+  PB_CoE_A_Small_Occitan_State:0 "The Pau-Toulouse-Nimes Concept"
+  PB_CoE_A_Small_Occitan_State_desc:0 "A German-French state with a Mediterranean border may be too much of a threat to the British navy in the region and its hold on North Africa, keeping the British diplomats with their hands tied on our proposed merger. While the establishment of an independent Occitania in Southern France may calm their nerves, we shouldn't be willing to completely abandon this important region of France. A small Occitania will have to do."
+  PB_CoE_A_Large_Occitan_State:0 "Implement the Pan-Occitan Dream"
+  PB_CoE_A_Large_Occitan_State_desc:0 "Southern France is a culture distinct from the urban jungle of Paris or the Anglo-Celtic fusion of cultures in the regions that were occupied by the Brits during the medieval era. Recognising this basic principle, Germany and Britain agree to the establishment of a fully independent Occitan state, encompassing all Occitan states stretching from the Pyrenees to the Italian border."
+  PB_CoE_Occitania_of_both_Seas:0 "The Intermarium Concept"
+  PB_CoE_Occitania_of_both_Seas_desc:0 "While strong, Occitania still needs more leverage on the international stage for the British to agree to our ambitious proposal. The Intermarium concept, coined by Bohemian thinker Jan Masaryk, proposes an Occitan state that borders both the Mediterranean and Atlantic, allowing it more options for a relationship with the British without the danger of isolation in the event of conflict in the Mediterranean."
 
   Coe_get_topic_France:0 "§GFrance§!"
   Coe_get_topic_Spain:0 "§GSpain§!"
@@ -31,7 +37,7 @@
   Coe_no_current_proposal:0 "§gNo Current Proposal§!"
   Coe_get_proposal_dexter:0 "§YDexter Plan§! \n\nFrance's pre-war borders will be restored, with the exception of Pas de Calais going to Wallonia [WLA.GetFlag]. French industry will be directly divided and watched over by the main members of the League of Nations."
   Coe_get_proposal_schwarz:0 "§YSchwarz Proposal§! \n\nPre-war France will lose Pas de Calais to Wallonia [WLA.GetFlag]and will be divided into its four fundamental regions: Occitania [OCT.GetFlag], Burgundy [BRG.GetFlag], Normandy [NRM.GetFlag] and the Seine Region."
-  Coe_get_proposal_francia:0 "§YProject \"Francia\"§! \n\nFrance [FRA.GetFlag]and Germany [GER.GetFlag] will unify under a single government, its capital located in Köln. §RNo war reparations can be expected from France if this plan is put in motion§!."
+  Coe_get_proposal_francia:0 "§YProject \"Francia\"§! \n\nFrance [FRA.GetFlag]and Germany [GER.GetFlag] will unify under a single government, its capital located in Köln. Wallonia [WLA.GetFlag] receives Pas de Calais as reparation. §RNo war reparations can be expected from France if this plan is put in motion§!."
 
   Coe_get_changes_lorraine:0 "\n- Continued German [GER.GetFlag]occupation of Lorraine"
   Coe_get_changes_demilitarisation:0 "\n- Extensive demilitarisation of the French state"
@@ -49,6 +55,14 @@
   Coe_proposed_plan:0 "§YProposed the Plan§! (Automatic §GApproval§!)"
 
   PB_COE_PROPOSAL_DEXTER:0 "The \"§YDexter Plan§!\" is currently discussed."
+  PB_COE_PROPOSAL_FRANCIA:0 "The \"§YRathenau Plan§!\" is currently discussed."
+  PB_COE_PROPOSAL_SCHWARZ:0 "The \"§YSchwarz Plan§!\" is currently discussed."
+
+  COE_IF_APPROVED:0 "\nIf the proposal is §Gapproved§!:" 
+
+  PB_COE_FRANCIA_LARGE_OCT:0 "Has proposed the establishment of a §Glarger§! Occitan state."
+  PB_COE_FRANCIA_SMALL_OCT:0 "Has proposed the establishment of a §Rsmaller§! Occitan state."
+
   COE_ISRAEL_IN_FRANCE:0 "A state has been picked for a Jewish homeland"
 
   PB_COE_GER_MORE_CHANCE:0 "§YGermany§! [GER.GetFlag]will be more likely to approve of this proposal, increasing the chance of a \"§GYes§!\" vote by [?Chance_Vote_Temporary|%+0]"
@@ -78,11 +92,31 @@
   COE.20.d:0 "A few exasperated sighs filled the small room in Palace Het Loo, as diplomats and government figures neatly compiled their papers once again into their briefcases. The first round of discussions had concluded and the topic of France was settled. \n\nAs coffee, tea and some light celebratory wine was offered to the many men standing in the halls of Het Loo, the fate of Europe was closer to being further constructed."
   COE.20.a:0 "And the curtains close on this debate"
 
-  COEDEX.1.t:0 "The Discussion of a Jewish Homeland"
-  COEDEX.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
+  COEDEXTER.1.t:0 "The Discussion of a Jewish Homeland"
+  COEDEXTER.1.d:0 "As British diplomats seek to further placate us with their Dexter Plan, the proposal of German diplomats to carve some territory away from France and give it to the Jewish people has been given the green light by the Brits. The Jewish people have suffered immensely under the French dictatorship, seeing themselves stripped from citizenship, property and sometimes their lives. The least we can do is come together and repay the Jewish people, a globally persecuted people, with their own homeland in France. \n\nThe question now remains which French state to grant the Jewish people. Preferably, the territory has a coast and isn't already claimed by another country."
   
+  COEGOV.1.t:0 "Formalizing a Normandian Government"
+  COEGOV.1.d:0 "With the establishment of an independent Normandy, a country that hasn't been a country since the age of Vikings, the question of government has been raised among the diplomats in Het Loo. The main problem is the exact type of government: will Normandy adhere to a monarch or be established as a republic? While the idea of a monarchy is interesting to many diplomats, the question of a king may proof to be difficult, especially after France's long experiment with Republicanism. The establishment of a Normandian Republic may prove more worthwile, as long as it is handled correctly and any member of the previous dictatorship is barred from holding office in the new republic."
+  COEGOV.1.a:0 "Establish a Normandian Kingdom"
+  COEGOV.1.b:0 "Establish a Normandian Republic"
+
   #Cosmetics
 
   GER_FRANCIA:0 "Francia"
   GER_FRANCIA_ADJ:0 "Francian"
   GER_FRANCIA_DEF:0 "The United Kingdoms of Francia"
+
+  NRM_GERMAN:0 "Kingdom of Normandy"
+  NRM_GERMAN_ADJ:0 "Normandian"
+  NRM_GERMAN_DEF:0 "The Kingdom of Normandy"
+
+  NRM_REPUBLIC:0 "Republic of Normandy"
+  NRM_REPUBLIC_ADJ:0 "Normandian"
+  NRM_REPUBLIC_DEF:0 "The Republic of Normandy"
+
+  #Ideas
+ 
+  PB_Constitutionally_Enshrined_Neutrality:0 "International Neutrality"
+  PB_Constitutionally_Enshrined_Neutrality_desc:0 "The neutrality of this nation is enshrined in its constitution and the treaty that established this country. Recognised by the international community, the neutrality of this nation is almost sacred."
+  PB_Purged_Administration:0 "Purged Bureaucracy"
+  PB_Purged_Administration_desc:0 "As part of the peace treaty, many figures of the previous government were barred from holding public office during their lifetime, seriously draining the pool of capable bureaucrats, politicians and diplomats in our country. It will take some time before inexperienced state employees can rise to the same level of expertise as the previous administration."
