--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -95,6 +95,8 @@ PB_Culture_Ukrainian_tt:0 "Ukrainian"
 PB_Culture_Moldovan_tt:0 "Moldovan"
 PB_Culture_Malorussian_tt:0 "Malorussian"
 PB_Culture_Polish_tt:0 "Polish"
+PB_Culture_Russopolish_tt:0 "Russopolish"
+PB_Culture_Lithuanian_tt:0 "Lithuanian"
 
 
 ## -------- Expanded Lore -------- ##
@@ -194,3 +196,5 @@ PB_Culture_Ukrainian_tt_delayed:0 ""
 PB_Culture_Moldovan_tt_delayed:0 ""
 PB_Culture_Malorussian_tt_delayed:0 ""
 PB_Culture_Polish_tt_delayed:0 ""
+PB_Culture_Russopolish_tt_delayed:0 ""
+PB_Culture_Lithuanian_tt_delayed:0 ""
