--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -98,6 +98,25 @@ PB_Culture_Polish_tt:0 "Polish"
 PB_Culture_Russopolish_tt:0 "Russopolish"
 PB_Culture_Lithuanian_tt:0 "Lithuanian"
 
+# SOUTH AMERICA #
+
+PB_Culture_Amazonian_tt:0 "Amazonian"
+PB_Culture_Argentine_tt:0 "Argentinean"
+PB_Culture_Bolivian_tt:0 "Bolivian"
+PB_Culture_Brazilian_tt:0 "Brazilian"
+PB_Culture_Chilean_tt:0 "Chilean"
+PB_Culture_Cisplatine_tt:0 "Cisplatine"
+PB_Culture_Colombian_tt:0 "Colombian"
+PB_Culture_Colombo_Amazonian_tt:0 "Colozonian"
+PB_Culture_Ecuadorian_tt:0 "Ecuadorian"
+PB_Culture_Equatorial_tt:0 "Equatorilian"
+PB_Culture_Guyanese_tt:0 "Guyanese"
+PB_Culture_Mapuche_tt:0 "Mapuche"
+PB_Culture_Paraguayan_tt:0 "Paraguayan"
+PB_Culture_Peruvian_tt:0 "Peruvian"
+PB_Culture_Quechua_tt:0 "Quecha"
+PB_Culture_Riograndese_tt:0 "Riograndese"
+PB_Culture_Venezuelan_tt:0 "Venezuelan"
 
 ## -------- Expanded Lore -------- ##
 
@@ -198,3 +217,23 @@ PB_Culture_Malorussian_tt_delayed:0 ""
 PB_Culture_Polish_tt_delayed:0 ""
 PB_Culture_Russopolish_tt_delayed:0 ""
 PB_Culture_Lithuanian_tt_delayed:0 ""
+
+# SOUTH AMERICA #
+
+PB_Culture_Amazonian_tt_delayed:0 "Amazonian is used as an umbrella term to group all native people of the Amazon basin. Despite wildly different cultures, religions and politics, these tribes still share a common history in their struggle against Brazilian colonisation. When Brazil still stood tall and rubber production caught up, the Amazonian people were giving an early warning what could have been, with Brazilian peasants working on large plantations, often at odds with the natives due to land conflicts. \n\nThe collapse of Brazil put a long, fortunate end to this. The natives, warned about the intents of the Brazilians, saw to reorganise themselves better. Amazonian culture underwent decades of development in the span of years, forced to as the threat of the white man's greed remained ever present."
+PB_Culture_Argentine_tt_delayed:0 ""
+PB_Culture_Bolivian_tt_delayed:0 ""
+PB_Culture_Brazilian_tt_delayed:0 "Brazilian is an odd concept in our current day and age. As the old Empire of Brazil fell, so did the idea of being Brazilian partially. In the north of former Brazil, a new identity sprung up with Equatorilian, while the south saw itself assimilate into a larger, Cisplatine identity. Nevertheless, Brazilian culture, defined by its unique Portuguese roots, remains. \n\nRejecting the ethnic nationalism popularised during the 19th century in favour of an identity based on loyalty to Brazil as a concept, it is no wonder that much of Brazil's population is triracial to some degree. Still, racism against Brazil's non-white population is prevelent, though not institutionalised. \"Whitening\" remains a soft policy on the local level and European racial sciences have become more popular among the white elite of Brazil after the failure of the Empire."
+PB_Culture_Chilean_tt_delayed:0 ""
+PB_Culture_Cisplatine_tt_delayed:0 ""
+PB_Culture_Colombian_tt_delayed:0 "To be Colombian in this modern world is a synonym for being traditional. While the majority of the country remains mestizo, a mix of European and indigenous Americans, the white elite continues the tradition of the colonial criollos through dominating the political structure of the country. While it may not have been the intention of Bolivar when he created his Gran Colombia, the criollos surely didn't mind abusing the power vacuum after his death and propped themselves up. \n\nIn modern times, Colombia remains a multiracial nation of people that identify being Colombian as an allegiance to the country instead of an ethnic background tied to the country, yet inequality still reigns in these jungles. While white Colombians enjoy the wine of the land, the rest of the population toils and picks the grapes for them."
+PB_Culture_Colombo_Amazonian_tt_delayed:0 "Colozonian (shortened for Colombo-Amazonian) is a weird periphery of two cultures clashing heavily as one in the region. Native Amazonians and Colombians have had a troublesome relationship, as peasants often clash with natives over land. However, after decades of Colombian rule, Amazonian natives and Colombian peasants have started to combine into a separate mestizo group. Uniquely rural, in touch with their roots and sometimes even syncretic with their beliefs, Colozonian culture has not been respected in the European-dominated society of Gran Colombia."
+PB_Culture_Ecuadorian_tt_delayed:0 "To define what is Ecuadorian is rather easy: namely, everything that isn't Colombian. While the idea of Ecuador as an imagined community of people started with the failed revolutions during the Wars of Independence, Ecuadorian identity still was able to be fostered during its years under Bogota rule. A periphery of the empire, Ecuador came to define itself staunchly as anti-Colombian. \n\nParts of this anti-Colombian attitude is translated into a liberal and unorthodox people. The rigid racial hierarchy of Colombia is rejected in favour of a more dynamic understanding of white, mestizo and black. Combining physical appearance with social class, geography, language and clothing, Ecuadorian understanding of race starkly contrasts with Colombia's rigid definitions. Still, despite this relaxed approach to race and a few other things, Ecuador's population remains faithful christians and at least a bit conservative."
+PB_Culture_Equatorial_tt_delayed:0 "Born from the rich and distinct culture, dialect and history of Nordeste, Equatorilian resembles a more distinct mix of African, native American and European cultures than other parts of Brazil, partially due to its important role in Brazil's slavery history. \n\nWith the dissolution of Brazil, local pride or bairrismo, formed the basis for an identity separate from Brazilian. As Brazilian identity became more enthralled with European culture, the Nordeste preserved its unique melting pot characteristic. From Maracatu to Vatapá, Nordeste is proud to have the cultural dynamic it has today."
+PB_Culture_Guyanese_tt_delayed:0 "Guyanese culture is defined by its history as a British colony. Once founded to be the sugarcane plantation of the Empire, Guyana's demographics changed rapidly throughout the 16th and 17th century, as African slaves were imported into Georgetown. When slavery was abolished, the people of Guyana were left as a mix of Afro-Guyanese, Amerindians, Europeans and a handful of Bengali workers. \n\nWhile Georgetown in the 19th century was a predominantly European city, the 20th century saw the rise of a black middle class in the city, defining its theatre, music and literature. Today, Guyana's culture defines itself in its stark contrasts: its history of slavery, the poverty many still endure and the struggles of Afro-Guyanese people and their place in the Empire."
+PB_Culture_Mapuche_tt_delayed:0 "The history of the Mapuche people is one of conflict. When the Spanish came to the Americas, the traditional lifestyle of the Mapuche was interrupted through brutal conquest of the Patagonian plains. While intermingling with the Spanish and giving form to a mestizo population in Argentine, the Mapuche remained on tense footing with an independent Argentine and Chile. Eventually, concepts of Manifest Destiny led to the expelling of the Mapuche people from the Pampas and to the southern tip of Patagonia, mirroring the American maltreatment of the native Indians. \n\nToday, Mapuche society has modernised with a rapid pace. The Ethiopia of Patagonia, the Mapuche have become ready to defend their current homes from further Latin-American encroachment."
+PB_Culture_Paraguayan_tt_delayed:0 ""
+PB_Culture_Peruvian_tt_delayed:0 "The rugged Andes mountains house the spirit of Peru as a nation. Divided by deep valleys and high mountains, Hispanic and native culture coexists. Perhaps more so than any other South American culture, Peruvian culture is syncretized with native cultures, creating an unique culture of European ideas with native American twists. From the literature, music, traditional clothing, dances and architecture, Peru embraces its relationship between communities, despite its dark colonial past."
+PB_Culture_Quechua_tt_delayed:0 "Quechua is a general, catch-all term for a large group of Andean natives that speak Quechua languages. Finding its roots in the Inca Empire and its neighbours, the Quechua people are most prominent in Peru, Bolivia and Ecuador, countries where the number of Quechua speakers are in the millions. \n\nWhile clearly distinct from each other, the Spanish dominance in the South American states has given rise to Quechua nation-building, forming a more collective and united identity consciousness around the native speakers of Quechua and their struggle against Hispanic supremacy."
+PB_Culture_Riograndese_tt_delayed:0 ""
+PB_Culture_Venezuelan_tt_delayed:0 ""
