--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -97,6 +97,7 @@ PB_Culture_Malorussian_tt:0 "Malorussian"
 PB_Culture_Polish_tt:0 "Polish"
 PB_Culture_Russopolish_tt:0 "Russopolish"
 PB_Culture_Lithuanian_tt:0 "Lithuanian"
+PB_Culture_Russian_tt:0 "Russian"
 
 # SOUTH AMERICA #
 
@@ -217,6 +218,7 @@ PB_Culture_Malorussian_tt_delayed:0 ""
 PB_Culture_Polish_tt_delayed:0 ""
 PB_Culture_Russopolish_tt_delayed:0 ""
 PB_Culture_Lithuanian_tt_delayed:0 ""
+PB_Culture_Russian_tt_delayed:0 "Russian"
 
 # SOUTH AMERICA #
 
