--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -98,6 +98,7 @@ PB_Culture_Polish_tt:0 "Polish"
 PB_Culture_Russopolish_tt:0 "Russopolish"
 PB_Culture_Lithuanian_tt:0 "Lithuanian"
 PB_Culture_Russian_tt:0 "Russian"
+PB_Culture_Siberian_tt:0 "Siberian"
 
 # SOUTH AMERICA #
 
@@ -218,7 +219,8 @@ PB_Culture_Malorussian_tt_delayed:0 ""
 PB_Culture_Polish_tt_delayed:0 ""
 PB_Culture_Russopolish_tt_delayed:0 ""
 PB_Culture_Lithuanian_tt_delayed:0 ""
-PB_Culture_Russian_tt_delayed:0 "Russian"
+PB_Culture_Russian_tt_delayed:0 ""
+PB_Culture_Siberian_tt_delayed:0 ""
 
 # SOUTH AMERICA #
 
