Tech Teams Stuff

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -406,6 +406,7 @@ naval_air_developer:0 "Naval Air Team"
 standard_sea_developer:0 "Standard Sea Team"
 atlantic_sea_developer:0 "Atlantic Sea Team"
 pacific_sea_developer:0 "Pacific Sea Team"
+medi_sea_developer:0 "Mediterranean Sea Team"
 battlefleet_developer:0 "Battlefleet Team"
 carrier_developer:0 "Carrier Team"
 submarine_developer:0 "Submersible Team"
@@ -459,3 +460,24 @@ PB_GER_Skoda_Arms:0 "Škoda Armworks"
 PB_GER_IG_Farben:0 "IG Farben"
 PB_GER_Krupp:0 "Krupp AG"
 PB_GER_Sinnesloschen:0 "Sinneslöschen"
+
+##########################
+# Frace - Maybe both
+##########################
+PB_FRA_Panhard:0 "Panhard"
+PB_FRA_Renault:0 "Renault Works"
+PB_FRA_Amx:0 "APX"
+PB_FRA_Somua:0 "SOMUA Machinery and Vehicles"
+PB_FRA_Acl:0 "ACL Dockyards"
+PB_FRA_Fcm:0 "FCM Designers"
+PB_FRA_ACF:0 "ACF Shipyards"
+PB_FRA_ACF_Special:0 "ACF Submarine Division"
+PB_FRA_Sncac:0 "SNCAC"
+PB_FRA_Sncan:0 "SNCAN"
+PB_FRA_Sncaso:0 "SNCASO"
+PB_FRA_Sncao:0 "SNCAO"
+PB_FRA_mas:0 "MAS Armworks"
+PB_FRA_Schneider:0 "Schneider Artillery"
+PB_FRA_Fuel_Commision:0 "Emergency Fuel Commision"
+PB_FRA_Famh:0 "FAMH Industries"
+PB_FRA_Special_Experiments:0 "SP Special Department"
