--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -254,6 +254,12 @@
  VICTORY_POINTS_418:0 "Kharkiv"
  VICTORY_POINTS_957:0 "Vladivostok"
  VICTORY_POINTS_1278:0 "Ufa"
+ VICTORY_POINTS_7081:0 "Annaba"
+ VICTORY_POINTS_10059:0 "Batna"
+ VICTORY_POINTS_4150:0 "Sidi bel Abbès"
+ VICTORY_POINTS_4116:0 "Tlemcen"
+ VICTORY_POINTS_12888:0 "Biskra"
+ VICTORY_POINTS_9960:0 "El Djelfa"
  VICTORY_POINTS_1459:0 "Tashkent"
  VICTORY_POINTS_1591:0 "Alma-Ata"
  VICTORY_POINTS_1599:0 "Tbilisi"
@@ -269,6 +275,10 @@
  VICTORY_POINTS_8007:0 "Multan"
  VICTORY_POINTS_1321:0 "Thiruvananthapuram"
  VICTORY_POINTS_10152:0 "Nellore"
+ VICTORY_POINTS_285:0 "Wexford"
+ VICTORY_POINTS_303:0 "Athlone"
+ VICTORY_POINTS_11371:0 "Sligo"
+ VICTORY_POINTS_385:0 "Londonderry"
  VICTORY_POINTS_3672:0 "Grozny"
  VICTORY_POINTS_6727:0 "Bélgorod-Dnestróvskiy"
  VICTORY_POINTS_3707:0 "Kishinev"
