More Russian culture work

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -99,6 +99,13 @@ PB_Culture_Russopolish_tt:0 "Russopolish"
 PB_Culture_Lithuanian_tt:0 "Lithuanian"
 PB_Culture_Russian_tt:0 "Russian"
 PB_Culture_Siberian_tt:0 "Siberian"
+PB_Culture_Finno_Ugrian_tt:0 "Finno-Ugrian"
+PB_Culture_Yakutian_tt:0 "Yakutian"
+PB_Culture_Volga_German_tt:0 "Volga-German"
+PB_Culture_Avarian_tt:0 "Avarian"
+PB_Culture_Kalmykian_tt:0 "kalmykian"
+PB_Culture_Kubanian_tt:0 "Kubanian"
+PB_Culture_Circassian_tt:0 "Circassian"
 
 # SOUTH AMERICA #
 
@@ -231,6 +238,13 @@ PB_Culture_Russopolish_tt_delayed:0 ""
 PB_Culture_Lithuanian_tt_delayed:0 ""
 PB_Culture_Russian_tt_delayed:0 ""
 PB_Culture_Siberian_tt_delayed:0 ""
+PB_Culture_Finno_Ugrian_tt_delayed:0 ""
+PB_Culture_Yakutian_tt_delayed:0 ""
+PB_Culture_Volga_German_tt_delayed:0 ""
+PB_Culture_Avarian_tt_delayed:0 ""
+PB_Culture_Kalmykian_tt_delayed:0 ""
+PB_Culture_Kubanian_tt_delayed:0 ""
+PB_Culture_Circassian_tt_delayed:0 ""
 
 # SOUTH AMERICA #
 
