--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -930,7 +930,7 @@
  STATE_928:0 "Ziguinchar"
  STATE_929:0 "Tagant"
  STATE_930:0 "Adrar"
- STATE_931:0 "Tiris Zemmour"
+ STATE_931:0 "Dakhla"
  STATE_932:0 "Bobo-Dioulasso"
  STATE_933:0 "Tera"
  STATE_934:0 "Maradi"
