--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -219,6 +219,7 @@
  VICTORY_POINTS_3022:0 "Trondheim"
  VICTORY_POINTS_122:0 "Bergen"
  VICTORY_POINTS_11105:0 "Helsinki"
+ VICTORY_POINTS_10070:0 "Rabat"
  VICTORY_POINTS_3083:0 "Turku"
  VICTORY_POINTS_3122:0 "Vaasa"
  VICTORY_POINTS_3137:0 "Tampere"
@@ -252,6 +253,11 @@
  VICTORY_POINTS_306:0 "Smolensk"
  VICTORY_POINTS_413:0 "Voronezh"
  VICTORY_POINTS_418:0 "Kharkiv"
+ VICTORY_POINTS_7203:0 "Agadir"
+ VICTORY_POINTS_4108:0 "Marrakesch"
+ VICTORY_POINTS_7100:0 "Fès"
+ VICTORY_POINTS_12100:0 "Nador"
+ VICTORY_POINTS_989:0 "Oujda"
  VICTORY_POINTS_957:0 "Vladivostok"
  VICTORY_POINTS_1278:0 "Ufa"
  VICTORY_POINTS_7081:0 "Annaba"
@@ -259,12 +265,14 @@
  VICTORY_POINTS_4150:0 "Sidi bel Abbès"
  VICTORY_POINTS_4116:0 "Tlemcen"
  VICTORY_POINTS_12888:0 "Biskra"
+ VICTORY_POINTS_7979:0 "Smara"
  VICTORY_POINTS_9960:0 "El Djelfa"
  VICTORY_POINTS_11921:0 "Sfax"
  VICTORY_POINTS_7077:0 "Kairouan"
  VICTORY_POINTS_7005:0 "Gabes"
  VICTORY_POINTS_12000:0 "Tataouine"
  VICTORY_POINTS_1459:0 "Tashkent"
+ VICTORY_POINTS_10875:0 "Dakhla"
  VICTORY_POINTS_1591:0 "Alma-Ata"
  VICTORY_POINTS_1599:0 "Tbilisi"
  VICTORY_POINTS_1821:0 "Yekaterinburg"
