--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -750,6 +750,10 @@
   PBNews.190.d:0 "The straight banana, that quintessential British fruit created in the '10s as a succesful attempt at bio-engineering a more resilient variant, has become increasingly scarce over the course of the war. Across the Empire, shops have signaled this scarcity of straight bananas with signs. \n\nThe scarcity of straight bananas is another direct impact of the war on the continent on the British people, as the importing of the luxurious yellow snack becomes difficult with French submarines terrorising merchant fleets. For now, the British public will have to replace their bananas with more plentiful options, like oranges."
   PBNews.190.a:0 "By George, no more straight bananas?"
 
+  PBNews.191.t:0 "WELSH COAL CRISIS"
+  PBNews.191.d:0 "Following Edison Imperial Electric's decision to automate key parts of the coal mining process, protests and riots have erupted across the British industrial heartland. Now being termed the Great Coal Crisis, the British government has been forced to intervene in a series of anti-automation riots across Wales and Southern England. Protests of a similar vein have spread across the entire country.\n\nExacerbating the situation is Edison Electric's stranglehold on the Imperial economy, with the ripple effects of this crisis hitting the rest of the Empire."
+  PBNews.191.a:0 "What about the economy?"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
