Toto - Africa (Official HD Video)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -580,6 +580,11 @@
  VICTORY_POINTS_8193:0 "Brazzavilla"
  VICTORY_POINTS_5210:0 "Mombasa"
  VICTORY_POINTS_2050:0 "Lagos"
+ VICTORY_POINTS_8034:0 "Enugu"
+ VICTORY_POINTS_4972:0 "Kano"
+ VICTORY_POINTS_2025:0 "Abuja"
+ VICTORY_POINTS_1891:0 "Sokoto"
+ VICTORY_POINTS_10836:0 "Ouagadougou"
  VICTORY_POINTS_7959:0 "Mesurado"
  VICTORY_POINTS_4948:0 "Dakar"
  VICTORY_POINTS_12766:0 "Asmara"
@@ -770,16 +775,16 @@
  VICTORY_POINTS_10803:0 "Abidjan"
  VICTORY_POINTS_12830:0 "Bangui"
  VICTORY_POINTS_1909:0 "Conakry"
- VICTORY_POINTS_12751:0 "Bamako"
  VICTORY_POINTS_1975:0 "Niamey"
  VICTORY_POINTS_1951:0 "Lomé"
- VICTORY_POINTS_8071:0 "Ouagadougou"
+ VICTORY_POINTS_4927:0 "Bamako"
+ VICTORY_POINTS_12891:0 "Bissau"
  VICTORY_POINTS_2081:0 "N'Djamena"
  VICTORY_POINTS_6971:0 "Huntington"
  VICTORY_POINTS_7045:0 "Raleigh"
  VICTORY_POINTS_3823:0 "Richmond"
  VICTORY_POINTS_3733:0 "Perth"
- VICTORY_POINTS_7992:0 "Nouakchott"
+ VICTORY_POINTS_10869:0 "Nouakchott"
  VICTORY_POINTS_12381:0 "Brisbane"
  VICTORY_POINTS_7388:0 "Tampa"
  VICTORY_POINTS_9418:0 "Bastogne"
