North American Culture

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -141,6 +141,21 @@ PB_Culture_Honduran_tt:0 "Honduran"
 PB_Culture_Nicaraguan_tt:0 "Nicaraguan"
 PB_Culture_Salvadorian_tt:0 "Salvadorian"
 
+# NORTH AMERICA #
+
+PB_Culture_Acadiana_French_tt:0 "Acadian"
+PB_Culture_Anglois_American_tt:0 "Anglois"
+PB_Culture_Appalachian_tt:0 "Appalachian"
+PB_Culture_Mexican_tt:0 "Mexican"
+PB_Culture_Midwestern_tt:0 "Midwestern"
+PB_Culture_New_Englander_tt:0 "New Englander"
+PB_Culture_Nortemexicano_tt:0 "Nortemexicano"
+PB_Culture_Old_Dixie_tt:0 "Old Dixie"
+PB_Culture_Quebecois_tt:0 "Quebecois"
+PB_Culture_Seminole_tt:0 "Seminole"
+PB_Culture_Tejano_American_tt:0 "Texan"
+PB_Culture_Yucatec_tt:0 "Yucatec" 
+
 ## -------- Expanded Lore -------- ##
 
 PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Culture_Loc]§!"
@@ -283,3 +298,18 @@ PB_Culture_Guatemalan_tt_delayed:0 ""
 PB_Culture_Honduran_tt_delayed:0 ""
 PB_Culture_Nicaraguan_tt_delayed:0 ""
 PB_Culture_Salvadorian_tt_delayed:0 ""
+
+# NORTH AMERICA #
+
+PB_Culture_Acadiana_French_tt_delayed:0 "Previously the name used for the French settlers of the Canadian maritime provinces in the 16th century, the term Acadian changed with the expulsion and subsequent ethnic cleansing of the region during British rule. Since then, the term Acadian has come to mean a Francophone inhabitant of the Greater Louisiana region, once France's most formidable colony in the New World. \n\nDespite local autonomy, the Acadian people remain repressed under Anglo supremacist laws, forbiding the use of French in government and other public spaces. Despite this official ban on the language, Acadia's cultural life remains brimming with French influence, as its music and theatre mix the newest fashions from metropolitan France with the local cultures of the mixed Creoles. Especially in its cuisine, deeply rooted in Occitan and French traditions, Acadia stubbornly refuses to bend the knee to the British."
+PB_Culture_Anglois_American_tt_delayed:0 ""
+PB_Culture_Appalachian_tt_delayed:0 ""
+PB_Culture_Mexican_tt_delayed:0 ""
+PB_Culture_Midwestern_tt_delayed:0 ""
+PB_Culture_New_Englander_tt_delayed:0 ""
+PB_Culture_Nortemexicano_tt_delayed:0 ""
+PB_Culture_Old_Dixie_tt_delayed:0 "Below the Mason-Dixon line lays the old South, once the beating heart of the Thirteen colonies when cotton made America into what it was. Remaining somewhat loyal to the Brits, Dixie would turn into a limited centre of power for the Commonwealth directly after the Revolution. Yet, good things rarely last and the abolishment of slavery, together with the industrial revolution rocking New England, led to the gradual decline into poverty of the Deep South. The big plantation houses are stark reminders of the past, monuments to the old landed elite of Dixie, who have lost any semblance of a colonial elite. \n\nDespite its losses, Dixie preserves its unique culture from the rest of the United States through the protection of its local cuisine, its rich selection of writers and the promotion of country and gospel music. Through the lense of the rest of America, Dixie is a land of many traits, both its \"souther hospitality\" and its more controversial racial notions. Especially the last trait has become problematic in recent years, as the Commonwealth government and its British allies make more and more steps towards liberalisation and equality. Few in Dixie don't share the anxiety that their Southern way of life may soon be under attack, though few would prefer to make clear which part of that life they mean."
+PB_Culture_Quebecois_tt_delayed:0 ""
+PB_Culture_Seminole_tt_delayed:0 "The story of the Seminole is one present among a few tribes on the Americas, making it rather powerful in the grand history of the continent. When the Europeans came, the Seminole people were decimated by European sickness, yet persevered and build up a strong community of people thriving on Floridian farmlands. When the Anglo settlers came, the Seminole, backed by African slaves who had made Florida their home, turned the tide and made peace with the Commonwealth, turning Florida into the only native-majority state of the entire Commonwealth. \n\nDespite the political odds stacked against the Seminole people, its culture remains intact. Important events like the Green Corn Dance are celebrated state-wide, while tobacco has been granted a special religious status, exempting it from federal law and taxes. Through hardship and Goliath-like odds, the Seminole have been able to survive."
+PB_Culture_Tejano_American_tt_delayed:0 "Texan or Tejano American describes the community of English speaking settlers in the Republic of Tejas, sons and daughters of previous American pioneers who now dominate the plains of Eastern Tejas. Rooted deeply in their freedom-loving and god-fearing culture, the Texans have been a vocal minority in the Tejas Republic, often heavily clashing with the big Hispanic landowners of the West. \n\nWith a culture heavily rooted in the old pioneers and a fascination with the tales of American heroes braving the uncivilized regions of this continent, the Texans are as \"folk\" as you can get in Tejas. Through their unique gun culture, prosperous ranches and semi-isolation from San Antonio, the Texans have been able to preserve their autonomy for quite some time at this point. Through their autonomy, these white protestants have basically formed a nation within our nation, one characterized by a \"free-and-fighting\" spirit and a rooted hatred for anything Mexican or catholic."
+PB_Culture_Yucatec_tt_delayed:0 ""
