--- a/localisation/english/PB_Opener_l_english.yml
+++ b/localisation/english/PB_Opener_l_english.yml
@@ -13,3 +13,5 @@
   Opener.4.d:0 "Due to the nature of the mod and it's dependence on the TNO style scripted peace deal system the PAX team has disabled the use of the potentially mod breaking vanilla peace deal system. We do understand that there may be some players that still wish to engage with this sytem despite the bugs it may (and will) cause.\n\nIf you do wish to disable the scripted peace deal system then do so by choosing the respective option below. Goodluck and Godspeed.\n\nIn the case of multiplayer only one player needs to choose the enable vanilla peace deal option."
   Opener.4.a:0 "I am aware this will break the mod but don't want the scripted peace deals"
   Opener.4.b:0 "Leave it as is"
+  PB_THIS_WILL_BREAK_THE_MOD_tt:0 "§RThis will break the mod!§!"
+  PB_THIS_WILL_NOT_BREAK_THE_MOD_tt:0 "§GThis will not break the mod!§!"
