So many cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -110,6 +110,16 @@ PB_Culture_Latvian_tt:0 "Latvian"
 PB_Culture_Estonian_tt:0 "Estonian"
 PB_Culture_Russobaltic_tt:0 "Russobaltic"
 PB_Culture_Kazakh_tt:0 "Kazakh"
+PB_Culture_Tatar_tt:0 "Tatar"
+PB_Culture_Bashkirian_tt:0 "Bashkirian"
+PB_Culture_Udmurtian_tt:0 "Udmurtian"
+PB_Culture_Nenet_tt:0 "Nenet"
+PB_Culture_Altaian_tt:0 "Altaian"
+PB_Culture_Buryatian_tt:0 "Buryatian"
+PB_Culture_Uzbek_tt:0 "Uzbek"
+PB_Culture_Turkmen_tt:0 "Turkmen"
+PB_Culture_Tajik_tt:0 "Tajik"
+PB_Culture_Kyrgyz_tt:0 "Kyrgyz"
 
 # SOUTH AMERICA #
 
@@ -268,6 +278,16 @@ PB_Culture_Latvian_tt_delayed:0 ""
 PB_Culture_Estonian_tt_delayed:0 ""
 PB_Culture_Russobaltic_tt_delayed:0 ""
 PB_Culture_Kazakh_tt_delayed:0 ""
+PB_Culture_Tatar_tt_delayed:0 ""
+PB_Culture_Bashkirian_tt_delayed:0 ""
+PB_Culture_Udmurtian_tt_delayed:0 ""
+PB_Culture_Nenet_tt_delayed:0 ""
+PB_Culture_Altaian_tt_delayed:0 ""
+PB_Culture_Buryatian_tt_delayed:0 ""
+PB_Culture_Uzbek_tt_delayed:0 ""
+PB_Culture_Turkmen_tt_delayed:0 ""
+PB_Culture_Tajik_tt_delayed:0 ""
+PB_Culture_Kyrgyz_tt_delayed:0 ""
 
 # SOUTH AMERICA #
 
