Super dooper small push

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -120,6 +120,7 @@ PB_Culture_Uzbek_tt:0 "Uzbek"
 PB_Culture_Turkmen_tt:0 "Turkmen"
 PB_Culture_Tajik_tt:0 "Tajik"
 PB_Culture_Kyrgyz_tt:0 "Kyrgyz"
+PB_Culture_Pontic_tt:0 "Pontic"
 
 # SOUTH AMERICA #
 
@@ -294,6 +295,7 @@ PB_Culture_Uzbek_tt_delayed:0 ""
 PB_Culture_Turkmen_tt_delayed:0 ""
 PB_Culture_Tajik_tt_delayed:0 ""
 PB_Culture_Kyrgyz_tt_delayed:0 ""
+PB_Culture_Pontic_tt_delayed:0 ""
 
 # SOUTH AMERICA #
 
