New Corridor (New Venting Spot)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -789,6 +789,10 @@
  VICTORY_POINTS_7388:0 "Tampa"
  VICTORY_POINTS_9418:0 "Bastogne"
  VICTORY_POINTS_1644:0 "Somerset"
+ VICTORY_POINTS_10785:0 "Northern Corridor Station"
+ VICTORY_POINTS_13229:0 "Southern Corridor Station"
+ VICTORY_POINTS_4047:0 "Sirte"
+ VICTORY_POINTS_9980:0 "Misratah"
  VICTORY_POINTS_8243:0 "Albany"
  VICTORY_POINTS_12715:0 "Mérida"
  VICTORY_POINTS_13207:0 "Bragman's Bluff"
@@ -838,7 +842,7 @@
  VICTORY_POINTS_13238:0 "Rhodes City"
  VICTORY_POINTS_5136:0 "Leopoldville"
  VICTORY_POINTS_4897:0 "Francisland"
- VICTORY_POINTS_1127:0 "South Benghasi"
+ VICTORY_POINTS_1127:0 "Ajdabiya"
  VICTORY_POINTS_11910:0 "Marsa"
  VICTORY_POINTS_10127:0 "South Marsa"
  VICTORY_POINTS_1071:0 "East Marsa"
