Middle East Cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -176,6 +176,17 @@ PB_Culture_Puerto_Rican_tt:0 "Puerto Rican"
 PB_Culture_Haitian_tt:0 "Haitian"
 PB_Culture_Cuban_tt:0 "Cuban"
 
+# MIDDLE EAST #
+
+PB_Culture_Kurdish_tt:0 "Kurdish"
+PB_Culture_Levantine_tt:0 "Levantine"
+PB_Culture_Persian_tt:0 "Persian"
+PB_Culture_Arabian_Gulf_tt:0 "Arabian Gulf"
+PB_Culture_Shia_Arab_tt:0 "Shia Arab"
+PB_Culture_Sunni_Arab_tt:0 "Sunni Arab"
+PB_Culture_Yemen_tt:0 "Yemen"
+PB_Culture_Omani_tt:0 "Omani"
+
 ## -------- Expanded Lore -------- ##
 
 PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Culture_Loc]§!"
@@ -353,3 +364,14 @@ PB_Culture_Yucatec_tt_delayed:0 ""
 PB_Culture_Puerto_Rican_tt_delayed:0 ""
 PB_Culture_Haitian_tt_delayed:0 ""
 PB_Culture_Cuban_tt_delayed:0 ""
+
+# MIDDLE EAST #
+
+PB_Culture_Kurdish_tt_delayed:0 ""
+PB_Culture_Levantine_tt_delayed:0 ""
+PB_Culture_Persian_tt_delayed:0 ""
+PB_Culture_Arabian_Gulf_tt_delayed:0 ""
+PB_Culture_Shia_Arab_tt_delayed:0 ""
+PB_Culture_Sunni_Arab_tt_delayed:0 ""
+PB_Culture_Yemen_tt_delayed:0 ""
+PB_Culture_Omani_tt_delayed:0 ""
