Super Events fix

--- a/localisation/english/PB_Super_Events_l_english.yml
+++ b/localisation/english/PB_Super_Events_l_english.yml
@@ -34,9 +34,9 @@
   SPEVNT_Second_Great_War_TEXT:0 "With this prinicple, you may live to see man-made horrors beyond your comprehension\n§O-Nikola Tesla-§!"
   SPEVNT_Second_Great_War_CLOSETEXT:0 "§OHELL IS LET LOOSE§!"
 
-  GFX_SPEVNT_Great_Balkan_War:0 "THE GREAT BALKAN WAR"
-  GFX_SPEVNT_Great_Balkan_War_TEXT:0 "A single spark will set off an explosion that will consume us all. I cannot tell you when that explosion will occur, but I can tell you where. Some damned foolish thing in the Balkans will set it off.\n§O-Otto von Bismarck-§!"
-  GFX_SPEVNT_Great_Balkan_War_CLOSETEXT:0 "§OA LAND UNITED IN FIRE§!"
+  SPEVNT_Great_Balkan_War:0 "THE GREAT BALKAN WAR"
+  SPEVNT_Great_Balkan_War_TEXT:0 "A single spark will set off an explosion that will consume us all. I cannot tell you when that explosion will occur, but I can tell you where. Some damned foolish thing in the Balkans will set it off.\n§O-Otto von Bismarck-§!"
+  SPEVNT_Great_Balkan_War_CLOSETEXT:0 "§OA LAND UNITED IN FIRE§!"
 
   SPEVNT_Brazil_Unification:0 "BRAZILIAN REUNIFICATION"
   SPEVNT_Brazil_Unification_TEXT:0 "Each drop of my blood will be an immortal flame in your conscience and will uphold the sacred will to resist. To hatred I reply with pardon, and to those who think they have defeated me, I reply with my victory.\n§O-Getúlio Vargas-§!"
