North African cultures

--- a/localisation/english/PB_Culture_l_english.yml
+++ b/localisation/english/PB_Culture_l_english.yml
@@ -187,6 +187,40 @@ PB_Culture_Sunni_Arab_tt:0 "Sunni Arab"
 PB_Culture_Yemen_tt:0 "Yemen"
 PB_Culture_Omani_tt:0 "Omani"
 
+# NORTH AFRICAN #
+
+PB_Culture_Riffian_tt:0 "Riffian"
+PB_Culture_Moroccan_tt:0 "Moroccan"
+PB_Culture_Algerian_tt:0 "Algerian"
+PB_Culture_Berber_tt:0 "Berber"
+PB_Culture_Sahwari_tt:0 "Sahwari"
+PB_Culture_Tunisian_tt:0 "Tunisian"
+PB_Culture_Tripolitanian_tt:0 "Tripolitanian"
+PB_Culture_Cyrenican_tt:0 "Cyrenican"
+PB_Culture_Egyptian_tt:0 "Egyptian"
+
+# AFRICAN #
+
+PB_Culture_Afro_European_tt:0 "Afro-European"
+
+# WEST AFRICAN #
+
+PB_Culture_Wolof_tt:0 "Wolof"
+PB_Culture_Fulani_tt:0 "Fulani"
+PB_Culture_Guinea_tt:0 "Guinea"
+PB_Culture_Mende_tt:0 "Mende"
+PB_Culture_Mesurado_tt:0 "Mesurado"
+PB_Culture_Bambara_tt:0 "Bambara"
+PB_Culture_Malinke_tt:0 "Malinke"
+PB_Culture_Mossi_tt:0 "Mossi"
+PB_Culture_Akan_tt:0 "Akan"
+PB_Culture_Fon_tt:0 "Fon"
+PB_Culture_Yoruba_tt:0 "Yoruba"
+PB_Culture_Hausa_tt:0 "Hausa"
+PB_Culture_Igbo_tt:0 "Igbo"
+PB_Culture_Kanembu_tt:0 "Kanembu"
+PB_Culture_Sara_tt:0 "Sara"
+
 ## -------- Expanded Lore -------- ##
 
 PB_Culture_Expanded_Lore_tt:0 "This state's majority culture is: §Y[get_PB_Culture_Loc]§!"
@@ -375,3 +409,37 @@ PB_Culture_Shia_Arab_tt_delayed:0 ""
 PB_Culture_Sunni_Arab_tt_delayed:0 ""
 PB_Culture_Yemen_tt_delayed:0 ""
 PB_Culture_Omani_tt_delayed:0 ""
+
+# NORTH AFRICAN #
+
+PB_Culture_Riffian_tt_delayed:0 ""
+PB_Culture_Moroccan_tt_delayed:0 ""
+PB_Culture_Algerian_tt_delayed:0 ""
+PB_Culture_Berber_tt_delayed:0 ""
+PB_Culture_Sahwari_tt_delayed:0 ""
+PB_Culture_Tunisian_tt_delayed:0 ""
+PB_Culture_Tripolitanian_tt_delayed:0 ""
+PB_Culture_Cyrenican_tt_delayed:0 ""
+PB_Culture_Egyptian_tt_delayed:0 ""
+
+# AFRICAN #
+
+PB_Culture_Afro_European_tt_delayed:0 ""
+
+# WEST AFRICAN #
+
+PB_Culture_Wolof_tt_delayed:0 ""
+PB_Culture_Fulani_tt_delayed:0 ""
+PB_Culture_Guinea_tt_delayed:0 ""
+PB_Culture_Mende_tt_delayed:0 ""
+PB_Culture_Mesurado_tt_delayed:0 ""
+PB_Culture_Bambara_tt_delayed:0 ""
+PB_Culture_Malinke_tt_delayed:0 ""
+PB_Culture_Mossi_tt_delayed:0 ""
+PB_Culture_Akan_tt_delayed:0 ""
+PB_Culture_Fon_tt_delayed:0 ""
+PB_Culture_Yoruba_tt_delayed:0 ""
+PB_Culture_Hausa_tt_delayed:0 ""
+PB_Culture_Igbo_tt_delayed:0 ""
+PB_Culture_Kanembu_tt_delayed:0 ""
+PB_Culture_Sara_tt:0 "Sara"
