WE GOT SOME PASTA EYO

--- a/localisation/english/PB_Italy_l_english.yml
+++ b/localisation/english/PB_Italy_l_english.yml
@@ -35,3 +35,10 @@
   Italian.4.t:0 "Italy requests to join the Imperial Powers"
   Italian.4.d:0 "With the Italian civil war now concluded Ferdinand III has requested that Britain allow Italy to formally enter the Imperial Powers alliance as a major ally of importance."
   Italian.4.a:0 "Of course"
+
+####################################
+#  Ministers
+
+ITA_PB_Dannunzio_HOS:0 "Gabriele D'Annunzio"
+PB_Il_Vate:0 "The Poet"
+####################################
