--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -192,6 +192,8 @@
  modern_tank_destroyer_equipment_1_short:0 "Modern LD"
  modern_tank_destroyer_equipment_1_desc:0 "Modern Landship Destroyers are an evolution of earlier light and medium LDs, preferring mobility and stealth to heavy armor."
 
+ gw_automat_archetype:0 "Automats"
+
  gw_automat_0:0 "Great War Automat"
  gw_automat_0_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
  gw_automat_archetype_desc:0 "The Great War spawned many new creations in warfare, the most famous one being the Automat Machines. Developed to outflank the enemy and accurately hit static enemy targets, the Automat is one of the greatest breakthroughs in military history. However the Great War Designs have several flaws. The armor is too thin, the structure too unreliable, the engines consume to much fuel for a short distance and furthermore there are still problems with the stability of the legs. But it is solid foundation. A foundation which we can improve upon."
@@ -202,12 +204,16 @@
  gw_automat_3:0 "Light Duopod III"
  gw_automat_3_desc:0 "The third variant of the Light Duopod exemplifies the perfecting of a craft. Mark III improves upon the characteristics of the old Duopods immensely, using more standardized parts that keep production costs low and the machine reliable. The perfecting of the Duopod's two legged transportation allows this version to reach speeds of 11/km per hour, turning it into a speed devil unmatched to most on the battlefield."
 
+ tripod_automat_archetype:0  "Tripods"
+
  tripod_automat_0:0 "Tripod I"
  tripod_automat_0_desc:0 "The Tripod is an unusual weapon, created out of a compromise of the old Great War automats: the issues of stabilization, light armor and fuel usage forced designers into either two camps of either Duopods or Quadropods. The Tripod breaks this trend as a jack-of-all-trades: more stable than the duopods and faster than the quadropod. However, as a compromise, the Tripod doesn't exhibit the heavy armor or firepower of the Quadropod, nor does it have the speed or low production cost of the Duopod."
  tripod_automat_1:0 "Tripod II"
  tripod_automat_1_desc:0 "Being a big improvement on the original compromise of the Tripod I, the Mark II of this weapon expands upon the original design in every way. Heavier armor, bigger guns, better material and even slightly faster, the Tripod II was made to be the ultimate weapon on the battlefield."
  tripod_automat_2:0 "Tripod III"
  tripod_automat_2_desc:0 ""
+
+ quadropod_automat_archetype:0 "Quadropod"
 
  quadropod_automat_0:0 "Quadropod I"
  quadropod_automat_0_desc:0 "Few things can truly spit in the face of God, but one can easily count the Quadropod among these god-smiting things. Solving the Great War issue of the automats with the answer of \"more legs, more armor\", the Quadropod is simply a walking battleship, equiped with guns previously used on cruisers. Still the design has flaws, as the Quadropod currently stands as a big, slow object, making it a prime target for artillery and planes." 
