--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -862,3 +862,6 @@
  VICTORY_POINTS_10099:0 "Sharm el-Sheikh"
  VICTORY_POINTS_11984:0 "Nicosia"
  VICTORY_POINTS_7211:0 "Patras"
+ VICTORY_POINTS_12038:0 "Almería"
+ VICTORY_POINTS_1176:0 "Granada"
+ VICTORY_POINTS_3945:0 "Cuenca"
