Added All the Algerian News Events

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -750,6 +750,32 @@
   PBNews.190.d:0 "The straight banana, that quintessential British fruit created in the '10s as a succesful attempt at bio-engineering a more resilient variant, has become increasingly scarce over the course of the war. Across the Empire, shops have signaled this scarcity of straight bananas with signs. \n\nThe scarcity of straight bananas is another direct impact of the war on the continent on the British people, as the importing of the luxurious yellow snack becomes difficult with French submarines terrorising merchant fleets. For now, the British public will have to replace their bananas with more plentiful options, like oranges."
   PBNews.190.a:0 "By George, no more straight bananas?"
 
+  PBNews.191.t:0 "BRITIAN LOSES ALGERIA"
+  PBNews.191.d:0 "The Anarchy in Algeria is now the new order. The British have lost control over the full region.\nAbout 3 Months ago, after the collapse of the Maghreb Mandate, The Administration of Leopoldville immediatly dispatched the army to regain control over Algeria but instead of a short campaign they met tenacious resistance by competent militias. Despite heavy fighting for over 3 Months, the British Forces were still not able to regain control over the entirety of the country and capture the rebel leaderships.\n\nAnd now London decided that it was enough. Algeria has been abandonment by the Empire."
+  PBNews.191.a:0 "How embarrasing."
+
+  PBNews.192.t:0 "BAF CONTROLS ALGERIA"
+  PBNews.192.d:0 "The British African Administration has reestablished its authority over Algeria.\n\nAbout 3 Months ago, after the collapse of the Maghreb Mandate, Britian lost control of vast lands of Northern Algeria to Algerian Nationalists and French Pied Noirs. The Administration of Leopoldville immediatly dispatched the army to regain control over the region but and met tenacious resistance by various militias. Despite heavy fighting for over 3 Months, the British Forces were to overcome their hardships and were able to breake the rebels organization and captured their leaderships."
+  PBNews.192.a:0 "British remains the Lord of Africa."
+
+  PBNews.193.t:0 "FAF UNIFIES ALGERIA"
+  PBNews.193.d:0 "The Front Algérie Française has unified all of Algeria.\n\nAfter the withrdrawal of the British, the alliance between the Pied Noirs and the Algerian Nationalist Movement quickly collapsed and soon both began to fight each other to settle the fate of Algeria once and for all. Their homecountry France was deeply invested in this conflict with several thousand tons of equipment and hundreds of volunteers arriving to help the Front win the war.\nThe Algerians fought until the bitter end but they could stop the reawakening of their old nightmare."
+  PBNews.193.a:0 "The Old Order Remains."
+
+  PBNews.194.t:0 "ALGERIANS PUSH OUT THE FAF"
+  PBNews.194.d:0 "The Algerian Nationalist Movement has unified all of Algeria.\n\nAfter the withrdrawal of the British, the alliance between the Pied Noirs and the Algerian Nationalist Movement quickly collapsed and soon both began to fight each other to settle the fate of Algeria once and for all. Despite great efforts by the French State to support the FAF in their war, the Algerians were able to overcome the superiority of the French Forces and defeated them in Algiers and Oran.\nNow the Algerians will have to settle the issue of the remaining Pied Noirs to guarentee the future of its country."
+  PBNews.194.a:0 "How unexpected."
+
+  PBNews.195.t:0 "FRANCE RETURNS TO ALGERIA"
+  PBNews.195.d:0 "The Front Algérie Français has accepted the inviatation by France to unify.\n\nThe Front had beaten all their enemies in Algeria, from the British to the Algerians and established full control over country. Now their greatest wish is fullfilled the return of France. Paris did not waste a minute to reintegrate their former lands into their country and is already sending units to Africa. Their army is arriving in mass on the continent while the French rebuild their old bases. Suddenly the British the worries of the Imperial Powers have doubled.\nThe power reals of the world are shifting. The French are once more in Africa."
+  PBNews.195.a:0 "The French Empire Returns."
+
+  PBNews.196.t:0 "FRANCE-ALGERIA WAR"
+  PBNews.196.d:0 "France has officialy declared war on Algeria.\n\nThey declared the newly independent country to be a uncivilized terrorist state which dangers the safety of the French people and gives them therefore the right to intervene. This invasion is a direct reaction to the Collapse of the FAF in Algeria and the unclear fate of the Pied Noirs in Algeria. Paris wants to return to the African Continent and is deeply worried about its investements in the region, especially regarding the Pied Noirs.\nWill the French win like in the 19th Century? Or will Algeria defend its independence?"
+  PBNews.196.a:0 "Blood is all they know."
+
+  
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
